// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerPage renders the given options as rows 1`] = `
<Screen
  drawUnderNavBar={true}
  navBarStyle="modal"
  showDismissButton={true}
  title="Pick Something"
>
  <FlatList
    data={
      Array [
        "a",
        "b",
        "c",
      ]
    }
    renderItem={[Function]}
    style={
      Object {
        "backgroundColor": "#F5F5F5",
      }
    }
  />
</Screen>
`;

exports[`PickerPage renders the given options as rows: a 1`] = `
<ForwardRef
  accessibilityRole="button"
  accessibilityState={
    Object {
      "selected": false,
    }
  }
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 0,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontWeight": "600",
            },
            Object {
              "fontWeight": "normal",
            },
          ]
        }
      >
        First One
      </Text>
    </View>
  </View>
</ForwardRef>
`;

exports[`PickerPage renders the given options as rows: b 1`] = `
<ForwardRef
  accessibilityRole="button"
  accessibilityState={
    Object {
      "selected": true,
    }
  }
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 0,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontWeight": "600",
            },
            Object {
              "fontWeight": "normal",
            },
          ]
        }
      >
        Second One
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "checkSolid",
            }
          }
          style={
            Object {
              "height": 20,
              "marginLeft": 16,
              "resizeMode": "contain",
              "tintColor": "#127A1B",
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
</ForwardRef>
`;

exports[`PickerPage renders the given options as rows: c 1`] = `
<ForwardRef
  accessibilityRole="button"
  accessibilityState={
    Object {
      "selected": false,
    }
  }
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 0,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontWeight": "600",
            },
            Object {
              "fontWeight": "normal",
            },
          ]
        }
      >
        Third One
      </Text>
    </View>
  </View>
</ForwardRef>
`;
